[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["yugetsu"]
license = "MIT Licence"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.11.4"
omegaconf = "^2.3.0"
matplotlib = "^3.8.2"
jupyter = "^1.0.0"
shiny = "^0.6.1.1"
shinylive = "^0.1.3"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
